kubernetes/cluster_bootstrap/01-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    istio-injection: enabled

---

apiVersion: v1
kind: Namespace
metadata:
  name: stg
  labels:
    istio-injection: enabled

---

apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    istio-injection: enabled

---

apiVersion: v1
kind: Namespace
metadata:
  name: security
