kubernetes/cluster_bootstrap/03-nettools-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nettools
  namespace: dev
spec:
  containers:
  - name: nettools
    image: raesene/alpine-nettools
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
  restartPolicy: Never
